Removed some inline styles & added css classes, fixed logic errors: if user tried adding a non integer value for cart & if cartItems were more than 50 items

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,10 @@
   width: 25%;
   height: 100%;
 }
+.NavbarSearch {
+  width:200px !important;
+  margin: 0 10px !important;
+}
 .NavbarUl {
   position: relative;
   padding: 0;
