--- a/src/containers/Category/Category.css
+++ b/src/containers/Category/Category.css
@@ -6,6 +6,9 @@
   font-weight: bolder;
   text-align: center;
 }
+.CategoryCol{
+  text-align: center;
+}
 .CategoryDivider {
   margin: 0px 0px !important;
 }
